<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:title="@string/save"
        android:id="@+id/save_action"
        android:icon="@drawable/check_bt"
        app:showAsAction="always"
        android:orderInCategory="0"
         />
</menu>
