...
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="letsMatch">Propose me someone</string>
    <string name="copied_to_clipboard">Message copied into clipboard</string>
    <string name="tip_swipe_avatar">Swipe left and right to choose your haircut and your clothes !</string>
    <string name="section_ar">Architecture</string>
    <string name="section_gc">Génie civil</string>
    <string name="section_sie">Environnement</string>
    <string name="section_cgc">Chimie</string>
    <string name="section_ma">Mathématiques</string>
    <string name="section_ph">Physique</string>
    <string name="section_el"><![CDATA[Electrique & Electronique]]></string>
...
