<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/general">

        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/stay_connected"
            android:key="auto-login"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:summaryOn="@string/stay_connected_summaryOn"
            android:summaryOff="@string/stay_connected_summaryOff"
            android:id="@+id/autoLogin" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/notifications"
            android:key="notifications"
            android:icon="@drawable/ic_chat_black_24dp"
            android:id="@+id/notifications" />
        <ListPreference
            android:defaultValue="1"
            android:title="@string/language"
            android:key="language"
            android:icon="@drawable/ic_public_black_24dp"
            android:dialogIcon="@drawable/ic_public_black_24dp" />
    </PreferenceCategory>
</PreferenceScreen>